--- a/OpsManage/templates/cmdb/basicData/idcManage.html
+++ b/OpsManage/templates/cmdb/basicData/idcManage.html
@@ -62,8 +62,8 @@
                             {% if count.idc_name == idc.idc_name %}
                             <span class="cabinfo ">主机：【 {{ count.data.servercount }} 】台</span><br>
                             <span class="cabinfo ">网络：【 {{ count.data.netcount }} 】台</span><br>
-                            <span class="cabinfo ">存储：【 {{ count.data.securitycount }} 】台</span><br>
-                            <span class="cabinfo ">安全：【 {{ count.data.storgecount }} 】台</span><br>
+                            <span class="cabinfo ">存储：【 {{ count.data.storgecount  }} 】台</span><br>
+                            <span class="cabinfo ">安全：【 {{ count.data.securitycount}} 】台</span><br>
                             {% endif %}
                             {% endfor %}
                         </div>
