--- a/OpsManage/templates/cmdb/ServerManage/add/add.html
+++ b/OpsManage/templates/cmdb/ServerManage/add/add.html
@@ -489,6 +489,9 @@
         var asset_no=$("#asset_no").val();
         var sn=$("#sn").val();
         if (asset_name != "" && asset_no != "" && sn != ""){
+            $.ajaxSetup({
+               data:{csrfmiddlewaretoken:'{{ csrf_token }}'}
+            });
             $.ajax({
                 url:"/cmdb/doVerify",
                 data:{"asset_name":asset_name,"asset_no":asset_no,"sn":sn,"assetId":'0'},
@@ -504,7 +507,9 @@
                         alert("提交失败，序列号sn已存在！")
                     }
                     else {
-                        document.getElementById('addForm').submit();
+                        document.getEleme            $.ajaxSetup({
+               data:{csrfmiddlewaretoken:'{{ csrf_token }}'}
+            });ntById('addForm').submit();
                     }
                 }
 
